fixed the css and its scaling on smaller devices. also added jumping apple

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,3 +6,7 @@
 root {
     background-color: whitesmoke;
 }
+
+.playground {
+    background-image: url("https://cdn.thecodehelp.in/background_294b2f19db.webp");
+}
